# sdp-2022-23

./: README.adoc  sdp-2022-23.code-workspace
homework/hw1/: README.adoc
homework/hw1/template/: README.adoc
homework/hw1/template/src/: solution.cpp  solution.h
homework/hw2/: README.adoc
homework/hw2/template/: CMakeLists.txt  README.adoc
homework/hw2/template/src/: RleString.cpp  RleString.h
homework/hw2/template/test/: RleStringTest.cpp
homework/hw3/: README.md
homework/hw3/template/: CMakeLists.txt
homework/hw3/template/src/: Node.h  Solution.h
homework/hw3/template/test/: TestAdditional.cpp  TestNode.cpp  TestSolution.cpp
lectures/2022-11-04/src/: dynamic_array.h
lectures/2022-11-08/: CMakeLists.txt  README.adoc
lectures/2022-11-08/test/: dynamic_array_test.cpp
lectures/2022-11-11/: CMakeLists.txt  README.adoc
lectures/2022-11-11/src/: DynamicArray.h  FixedSizeArray.h
lectures/2022-11-11/test/: DynamicArrayTest.cpp  FixedSizeArrayTest.cpp
lectures/2022-12-23/: CMakeLists.txt
lectures/2022-12-23/src/: Allocator.h  Node.h  NodeIterator.h  NodeOperations.h  Tree.h
lectures/2022-12-23/test/: SampleTree.h  TestAllocator.cpp  TestNode.cpp  TestNodeIterator.cpp  TestNodeOperations.cpp  TestTree.cpp
templates/hw1/: CMakeLists.txt
templates/hw1/src/: application.cpp
templates/hw1/test/: solution.cpp
